# robocon2025_A_stm

./: .gitmodules  CMakeLists.txt  package.xml
include/robocon2025_a/: ArmData.msg  ArmStruct.hpp  EncoderStruct.hpp  Manipulator3Dof.hpp
install/: local_setup.sh  setup.sh
install/robocon2025_a/share/robocon2025_a/: package.bash  package.zsh
log/: latest_build
src/: main.cpp
